examples/test/testpolicy12468.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy12468
  namespace: namespace220
spec:
  podSelector:
    matchLabels:
      key2: value17
      key8: value10
      key45: value45
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key27: value35
          key7: value48
          key24: value22
      podSelector:
        matchLabels:
          key4: value30
